feat: implement delete user case
